create method for posts, styles and props only of components

--- a/src/css/sass/_layout.scss
+++ b/src/css/sass/_layout.scss
@@ -66,3 +66,15 @@ a{
     color: $white-light;
     padding: 8px;
 }
+
+.img-profile{
+    width: 56px;
+    height: 56px;
+    background-color: $gray-2;
+    border-radius: 50%;
+}
+
+.container-posts{
+    display: flex;
+}
+
