--- a/src/css/style.css
+++ b/src/css/style.css
@@ -733,4 +733,17 @@ a {
   color: #FAFCFC;
   padding: 8px;
 }
+
+.img-profile {
+  width: 56px;
+  height: 56px;
+  background-color: #4E4E50;
+  border-radius: 50%;
+}
+
+.container-posts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
 /*# sourceMappingURL=style.css.map */
